--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,11 @@ jobs:
         uses: Azure/functions-action@v1
         id: fa
         with:
-          app-name: 'mylogicapp7007'
+          app-name: 'mylogicapp7007-uat'
           package: logicapp.zip
           publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
 
       - uses: azure/appservice-settings@v1
         with:
-          app-name: 'mylogicapp7007'
+          app-name: 'mylogicapp7007-uat'
           app-settings-json: ${{vars.CONFIG}}
